# termux-app

./: README.md  settings.gradle
app/src/main/: AndroidManifest.xml
termux-display/: build.gradle
termux-display/src/main/cpp/: CMakeLists.txt
termux-display/src/main/cpp/display/: CMakeLists.txt  android.cpp
termux-display/src/main/cpp/termux-display-client/include/: InputEvent.h
termux-display/src/main/cpp/termux-display-client/renderer/: client.cpp
termux-display/src/main/cpp/termux-display-server/: CMakeLists.txt
termux-display/src/main/cpp/termux-display-server/inc/: OutputClient.h  OutputEvent.h  SocketIPCServer.h
termux-display/src/main/cpp/termux-display-server/include/: server.h
termux-display/src/main/cpp/termux-display-server/renderer/: OutputClient.cpp  SocketIPCServer.cpp  server.cpp
termux-display/src/main/java/com/termux/display/: Display.java  Render.java  RenderActivity.java  RenderSurface.java
termux-display/src/main/res/layout/: activity_main.xml
termux-wayland/: build.gradle
termux-wayland/src/androidTest/java/com/termux/wayland/: ExampleInstrumentedTest.java
termux-wayland/src/main/cpp/: CMakeLists.txt  wayland.cpp
termux-wayland/src/main/java/com/termux/wayland/: NativeLib.java
termux-wayland/src/test/java/com/termux/wayland/: ExampleUnitTest.java
termux-x11/: build.gradle
termux-x11/src/main/cpp/lorie/: readme.txt
termux-x11/src/main/java/com/termux/x11/: LoriePreferences.java  LorieView.java  MainActivity.java
termux-x11/src/main/java/com/termux/x11/input/: InputStub.java
